--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,5 @@
 @tailwind utilities;
 
 body {
-    font-family: 'EB Garamond', serif;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Montserrat', sans-serif;
 }
